--- a/src/main/resources/VAADIN/themes/mbmg/styles.scss
+++ b/src/main/resources/VAADIN/themes/mbmg/styles.scss
@@ -2,7 +2,7 @@
 
 /*
  * This file prefixes all rules with the theme name to avoid causing conflicts with other themes.
- * The actual styles should be defined in sample.scss
+ * The actual styles should be defined in mbmg.scss
  */
 .sample {
   @include sample;
