Fix scss names to make theme work again

--- a/src/main/resources/VAADIN/themes/mbmg/mbmg.scss
+++ b/src/main/resources/VAADIN/themes/mbmg/mbmg.scss
@@ -5,7 +5,7 @@
 @import "../reindeer/reindeer.scss";
 
 /* This contains all of your theme.*/
-@mixin sample {
+@mixin mbmg {
   /* Include all the styles from the reindeer theme */
   @include reindeer;
 
