--- a/src/main/resources/VAADIN/themes/mbmg/styles.scss
+++ b/src/main/resources/VAADIN/themes/mbmg/styles.scss
@@ -1,9 +1,9 @@
-@import "sample.scss";
+@import "mbmg";
 
 /*
  * This file prefixes all rules with the theme name to avoid causing conflicts with other themes.
  * The actual styles should be defined in mbmg.scss
  */
-.sample {
-  @include sample;
+.mbmg {
+  @include mbmg;
 }
