--- a/src/main/webapp/VAADIN/themes/mbmg/styles.scss
+++ b/src/main/webapp/VAADIN/themes/mbmg/styles.scss
@@ -1,4 +1,4 @@
-@import "mbmg";
+@import "mbmg.scss";
 
 /*
  * This file prefixes all rules with the theme name to avoid causing conflicts with other themes.
